gitops/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcheck-svc
spec:
  selector:
    app: healthcheck
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  #type: ClusterIP        ## default
  #type: LoadBalancer
  #loadBalancerIP: ""
